Correzione fornitura verbali

--- a/docs/interni/norme_di_progetto/norme_di_progetto.tex
+++ b/docs/interni/norme_di_progetto/norme_di_progetto.tex
@@ -47,7 +47,7 @@ Il processo di fornitura determina le attività e le risorse che servo per gesti
 \subsubsection{Repository pubblica}
 Durante tutto il progetto verrà usata un unica repository pubblica. La parte di repository che interessa al proponente ed al committente è la cartella \texttt{public} definita come parte pubblica della repository. Questa cartella contiene un file read-me in cui viene spiegato ed elencato il contenuto della parte pubblica con un avviso che chiede di restarne all'interno, ignorando il resto della repository, detta parte privata.\\\\
 La parte pubblica contiene i documenti necessari alle revisioni di periodo con il committente.\\
-La struttura della cartella \texttt{public} rispecchia la struttura della cartella \texttt{docs}. \\
+La struttura della cartella \texttt{public} rispecchia la struttura della cartella \texttt{docs}. Fanno eccezione i verbali che saranno tutti all'interno delle cartelle \texttt{esterni/verbali} e \texttt{interni/verbali} e non avranno ciascuno la propria cartella.\\
 Ogni documento che prevede versionamento deve indicare la versione nel nome del file stesso nel seguente modo: \texttt{$<$NomeFile$>$\_v$<$versione$>$.pdf}. I documenti con le versioni vecchie andranno mantenuti. \\
 Ogni modifica alla parte pubblica deve essere approvata dal responsabile, cui spetta accettare le pull request della parte pubblica.
 \subsubsection{Contatti con proponente e committente}
