--- a/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
+++ b/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
@@ -22,18 +22,19 @@
 Analisi dei requisiti del progetto ShopChain con casi d'uso e requisiti.
 }
 
-\addversione{0.0.0}{11/12/2021}{Alberto Nicoletti}{Redazione}{Strutturazione del documento}
-\addversione{0.0.1}{03/01/2021}{Andrea Volpe}{Redazione}{Stesura casi d'uso}
-\addversione{0.0.2}{21/01/2022}{Alberto Nicoletti}{Redazione}{Stesura requisiti}
-\addversione{0.0.3}{21/01/2022}{Andrea Volpe}{Redazione}{Riorganizzazione requisiti}
-\addversione{0.1.0}{04/02/2022}{Giovanni Cocco}{Revisione}{Correzioni varie}
-\addversione{0.1.1}{05/02/2022}{Alberto Nicoletti}{Redazione}{Adeguamento casi d'uso a tecnologie scelte}
-\addversione{0.1.2}{07/02/2022}{Andrea Volpe}{Redazione}{Modifica dei requisiti come concordato nell'incontro del 04/02/2022}
-\addversione{1.0.0}{09/02/2022}{Elia Scandaletti}{Approvazione}{Approvazione per RTB}
-\addversione{1.0.1}{01/03/2022}{Giovanni Cocco}{Redazione}{Approfondimento requisiti funzionali}
-\addversione{1.0.2}{01/03/2022}{Elia Scandaletti}{Redazione}{Applicazione indicazioni del prof. Cardin}
-\addversione{1.0.3}{11/03/2022}{Alberto Nicoletti}{Redazione}{Applicazione indicazioni del prof. Cardin}
-\addversione{1.1.0}{01/04/2022}{Andrea Volpe}{Redazione}{Riadattato casi d'uso e requisiti in base alle nuove modifiche}
+\addversione{0.0.0}{11/12/2021}{Alberto Nicoletti}{Redazione}{Strutturazione del documento.}
+\addversione{0.0.1}{03/01/2021}{Andrea Volpe}{Redazione}{Stesura casi d'uso.}
+\addversione{0.0.2}{21/01/2022}{Alberto Nicoletti}{Redazione}{Stesura requisiti.}
+\addversione{0.0.3}{21/01/2022}{Andrea Volpe}{Redazione}{Riorganizzazione requisiti.}
+\addversione{0.1.0}{04/02/2022}{Giovanni Cocco}{Revisione}{Correzioni varie.}
+\addversione{0.1.1}{05/02/2022}{Alberto Nicoletti}{Redazione}{Adeguamento casi d'uso a tecnologie scelte.}
+\addversione{0.1.2}{07/02/2022}{Andrea Volpe}{Redazione}{Modifica dei requisiti come concordato nell'incontro del 04/02/2022.}
+\addversione{1.0.0}{09/02/2022}{Elia Scandaletti}{Approvazione}{Approvazione per RTB.}
+\addversione{1.0.1}{01/03/2022}{Giovanni Cocco}{Redazione}{Approfondimento requisiti funzionali.}
+\addversione{1.0.2}{01/03/2022}{Elia Scandaletti}{Redazione}{Applicazione indicazioni del prof. Cardin.}
+\addversione{1.0.3}{11/03/2022}{Alberto Nicoletti}{Redazione}{Applicazione indicazioni del prof. Cardin.}
+\addversione{1.1.0}{01/04/2022}{Andrea Volpe}{Redazione}{Riadattato casi d'uso e requisiti in base alle nuove modifiche.}
+\addversione{1.1.1}{13/04/2022}{Elia Scandaletti}{Redazione}{Correzione grammatica.}
 
 
 \begin{document}
@@ -52,7 +53,7 @@ Lo scopo del documento è raccogliere i risultati dell'attività di analisi dei 
 \paragraph{Riferimenti normativi}
 \begin{itemize}
     \item \underline{\href{https://www.math.unipd.it/~tullio/IS-1/2021/Progetto/C2.pdf}{Capitolato d'appalto C2}};
-    \item \underline{\href{https://github.com/iota97/WinningSoftwareSolution/blob/main/public/interni/norme_di_progetto/norme_di_progetto_v2.0.1.pdf}{Norme di Progetto}};
+    \item \underline{\href{https://github.com/iota97/WinningSoftwareSolution/blob/main/public/interni/norme_di_progetto/norme_di_progetto_v2.0.2.pdf}{Norme di Progetto}};
     \item \underline{\href{https://github.com/iota97/WinningSoftwareSolution/blob/main/public/esterni/verbali/2021_10_28_E.pdf}{Verbale esterno 2021/10/28}};
     \item \underline{\href{https://github.com/iota97/WinningSoftwareSolution/blob/main/public/esterni/verbali/2021_11_12_E.pdf}{Verbale esterno 2021/11/12}};
     \item \underline{\href{https://github.com/iota97/WinningSoftwareSolution/blob/main/public/esterni/verbali/2021_12_22_E.pdf}{Verbale esterno 2021/12/22}};
@@ -244,7 +245,7 @@ UC2.1 Errore venditore con wallet non connesso:
 \textbf{Attore primario}: Venditore  con wallet connesso.\\
 \textbf{Precondizioni}: Il venditore vuole annullare una transazione in attesa.\\
 \textbf{Postcondizioni}: La transazione è stata annullata ed i fondi sono stati restituiti all'acquirente.\\
-\textbf{Scenario principale}: Il venditore annulla una transizione in stato di attessa ed i fondi vengono restituiti all'acquirente.\\
+\textbf{Scenario principale}: Il venditore annulla una transizione in stato di attesa ed i fondi vengono restituiti all'acquirente.\\
 \textbf{Requisiti collegati}: RFO51.
 
 \paragraph{UC4.6 - visualizzazione data transazione}\\
