--- a/docs/esterni/manuale_acquirente/manuale_acquirente.tex
+++ b/docs/esterni/manuale_acquirente/manuale_acquirente.tex
@@ -35,7 +35,7 @@ Per l'inserimento e la configurazione del network Polygon nel proprio wallet Met
 \item Network Name: \textbf{Matic Mainnet};
 \item New RPC Url: \textbf{https://rpc-mainnet.maticvigil.com/};
 \item ChainID: \textbf{137};
-\item Currency Simbol: \textbf{MATIC};
+\item Currency Symbol: \textbf{MATIC};
 \item Block Explorer URL: \textbf{https://explorer.matic.network/}.
 \end{itemize}
 Una volta inseriti i dati e aggiunto il network, selezionare il network prima di procedere con il pagamento.
@@ -56,8 +56,8 @@ Per poter eseguire il pagamento è necessario collegare il proprio wallet Metama
 \FloatBarrier
 
 \section{Acquisto di un prodotto}
-Per effettuare il pagamento sarà necessario detenere nel proprio wallet Metamask l'equivalente in MATIC del prezzo in dollari dell'item che si vuole acquistare. MATIC è la cryptovaluta nativa della blockchain Polygon con la quale è possibile pagare con Shop Chain.
-\\É possibile scambiare le proprie cryptovalute sul network Polygon attraverso uno dei seguenti exchange decentralizzati:
+Per effettuare il pagamento sarà necessario detenere nel proprio wallet Metamask l'equivalente in MATIC del prezzo in dollari dell'item che si vuole acquistare. MATIC è la criptovaluta nativa della blockchain Polygon con la quale è possibile pagare con Shop Chain.
+\\É possibile scambiare le proprie criptovalute sul network Polygon attraverso uno dei seguenti exchange decentralizzati:
 
 \begin{itemize}
 \item \href{https://www.quickswap.exchange}{QuickSwap};
