--- a/docs/esterni/specifiche_architetturali/specifiche_architetturali.tex
+++ b/docs/esterni/specifiche_architetturali/specifiche_architetturali.tex
@@ -21,8 +21,9 @@
 Architettura del progetto
 }
 
-\addversione{1.0.0}{23/02/2022}{Giovanni Cocco}{Redazione}{Creazione del documento}
-\addversione{1.1.0}{03/04/2022}{E. Scandaletti, M. Galvagni}{Redazione}{Aggiunti dettagli dell'architettura}
+\addversione{1.0.0}{23/02/2022}{Giovanni Cocco}{Redazione}{Creazione del documento.}
+\addversione{1.1.0}{03/04/2022}{E. Scandaletti, M. Galvagni}{Redazione}{Aggiunti dettagli dell'architettura.}
+\addversione{1.1.1}{13/04/2022}{Elia Scandaletti}{Redazione}{Aggiornamento link.}
 
 \begin{document}
 
@@ -41,7 +42,7 @@ Il presente documento ha lo scopo di illustrare le scelte architetturali e l'arc
 \subsection{Riferimenti normativi}
 \begin{itemize}
     \item \underline{\href{https://www.math.unipd.it/~tullio/IS-1/2021/Progetto/C2.pdf}{Capitolato d'appalto C2}};
-    \item \underline{\href{https://github.com/iota97/WinningSoftwareSolution/blob/main/public/interni/norme_di_progetto/norme_di_progetto_v2.0.1.pdf}{Norme di Progetto}};
+    \item \underline{\href{https://github.com/iota97/WinningSoftwareSolution/blob/main/public/interni/norme_di_progetto/norme_di_progetto_v2.0.2.pdf}{Norme di Progetto}};
     \item \underline{\href{https://github.com/iota97/WinningSoftwareSolution/blob/main/public/esterni/verbali/2022_01_03_E.pdf}{Verbale esterno 2022/03/01}}.
 \end{itemize}
 \subsection{Riferimenti informativi}
