--- a/docs/interni/norme_di_progetto/norme_di_progetto.tex
+++ b/docs/interni/norme_di_progetto/norme_di_progetto.tex
@@ -14,18 +14,19 @@
 Questo documento contiene le procedure, gli strumenti e i criteri di qualità che verranno usati nel progetto.
 }
 
-\addversione{0.0.0}{13/11/2021}{Elia Scandaletti}{Redazione}{Stesura documentazione}
-\addversione{0.0.1}{14/11/2021}{Elia Scandaletti}{Redazione}{Stesura configurazione Github}
-\addversione{0.0.2}{07/12/2021}{Elia Scandaletti}{Redazione}{Inserimento norme da verbale del 01/12/2021}
-\addversione{0.0.3}{22/12/2021}{Elia Scandaletti}{Redazione}{Stesura regole stesura verbali}
-\addversione{0.0.4}{09/01/2022}{Raffaele Oliviero}{Redazione}{Ristrutturazione documento}
-\addversione{0.0.5}{09/01/2022}{Raffaele Oliviero}{Redazione}{Stesura struttura del piano di qualifica e della verifica e validazione}
-\addversione{0.0.6}{16/01/2022}{Elia Scandaletti}{Redazione}{Adeguamento di verifica e validazione secondo decisioni collettive}
-\addversione{0.0.7}{04/02/2022}{Giovanni Cocco}{Redazione}{Stesure delle revisioni di avanzamento interne}
-\addversione{0.0.8}{08/02/2022}{Raffaele Oliviero}{Redazione}{Stesura di: analisi dei requisiti, analisi delle tecnologie e piano di progetto}
-\addversione{0.0.9}{16/02/2022}{Giovanni Cocco}{Redazione}{Stesura di norme software}
-\addversione{2.0.0}{20/03/2022}{Alberto Nicoletti}{Redazione}{Rifacimento documento completo}
-\addversione{2.0.1}{17/04/2022}{Elia Scandaletti}{Redazione}{Aggiornamento processo fornitura}
+\addversione{0.0.0}{13/11/2021}{Elia Scandaletti}{Redazione}{Stesura documentazione.}
+\addversione{0.0.1}{14/11/2021}{Elia Scandaletti}{Redazione}{Stesura configurazione Github.}
+\addversione{0.0.2}{07/12/2021}{Elia Scandaletti}{Redazione}{Inserimento norme da verbale del 01/12/2021.}
+\addversione{0.0.3}{22/12/2021}{Elia Scandaletti}{Redazione}{Stesura regole stesura verbali.}
+\addversione{0.0.4}{09/01/2022}{Raffaele Oliviero}{Redazione}{Ristrutturazione documento.}
+\addversione{0.0.5}{09/01/2022}{Raffaele Oliviero}{Redazione}{Stesura struttura del piano di qualifica e della verifica e validazione.}
+\addversione{0.0.6}{16/01/2022}{Elia Scandaletti}{Redazione}{Adeguamento di verifica e validazione secondo decisioni collettive.}
+\addversione{0.0.7}{04/02/2022}{Giovanni Cocco}{Redazione}{Stesure delle revisioni di avanzamento interne.}
+\addversione{0.0.8}{08/02/2022}{Raffaele Oliviero}{Redazione}{Stesura di: analisi dei requisiti, analisi delle tecnologie e piano di progetto.}
+\addversione{0.0.9}{16/02/2022}{Giovanni Cocco}{Redazione}{Stesura di norme software.}
+\addversione{2.0.0}{20/03/2022}{Alberto Nicoletti}{Redazione}{Rifacimento documento completo.}
+\addversione{2.0.1}{17/04/2022}{Elia Scandaletti}{Redazione}{Aggiornamento processo fornitura.}
+\addversione{2.0.2}{18/04/2022}{Elia Scandaletti}{Redazione}{Correzione grammatica.}
 
 \begin{document}
 
@@ -43,7 +44,7 @@ Lo scopo del presente documento è definire procedure, strumenti e criteri di qu
 
 \section{Processi Primari}
 \subsection{Fornitura}\label{fornitura}
-Il processo di fornitura determina le attività e le risorse che servo per gestire e assicurare il progetto. In questa sezione vengono stilate le norme per la gestione dei rapporti con il proponente ed il committente.
+Il processo di fornitura determina le attività e le risorse che servono per gestire e assicurare il progetto. In questa sezione vengono stilate le norme per la gestione dei rapporti con il proponente ed il committente.
 \subsubsection{Repository pubblica}
 Durante tutto il progetto verrà usata un unica repository pubblica. La parte di repository che interessa al proponente ed al committente è la cartella \texttt{public} definita come parte pubblica della repository. Questa cartella contiene un file read-me in cui viene spiegato ed elencato il contenuto della parte pubblica con un avviso che chiede di restarne all'interno, ignorando il resto della repository, detta parte privata.\\\\
 La parte pubblica contiene i documenti necessari alle revisioni di periodo con il committente.\\
@@ -83,7 +84,7 @@ Fonti da cui rilevare le informazioni:
 		\item Numerare ogni caso d'uso come \textit{UCX}. \\
 		Ogni generalizzazione di X viene numerata come \textit{UCX.x} .\\
 		Dove \textit{X} e \textit{x} sono numeri interi positivi $>$= 1, progressivi.\\
-		E' buona norma seguire una numerazione progressiva in base all'ordine in cui sono 
+		\`E buona norma seguire una numerazione progressiva in base all'ordine in cui sono 
 		disposti i diagrammi, sebbene nel tempo possono essere eliminati/aggiunti casi d'uso.\\
 		Per evitare di dover rinumerare tutti i diagrammi: \\
 		Se si aggiungono casi d'uso, partire dalla numerazione del caso d'uso con indice \textit{X} maggiore.\\
@@ -182,7 +183,7 @@ Non è consentito forzare i push sulla repository remota.
 La codifica ha il compito di trasformare l'architettura del prodotto in codice eseguibile dai calcolatori.\\
 I programmatori trasformano quindi il lavoro fatto dai progettisti in codice, basandosi puramente sulle scelte architetturali.
 \paragraph{Descrizione}
-La scrittura del codice deve rispetare le norme elencate di seguito
+La scrittura del codice deve rispettare le norme elencate di seguito
 \paragraph{Convenzioni linguistiche}
 \begin{itemize}
 	\item Il codice deve essere scritto in lingua inglese (nomi di variabili, classi, commenti ecc..)
@@ -202,7 +203,7 @@ La scrittura del codice deve rispetare le norme elencate di seguito
 	\end{itemize}
 \paragraph{Convenzioni stile di codifica}
 \begin{itemize}
-	\item Utilizzare la notazione \textit{PascalCase} per nominare varibili, funzioni, classi.
+	\item Utilizzare la notazione \textit{PascalCase} per nominare variabili, funzioni, classi.
 	\item Se il linguaggio prevede l'utilizzo delle classi, suddividere ogni classe in un file separato.
 	\item Se un istruzione condizionale(e.g. if-else) o un istruzione di ciclo(e.g. for, while) prevede un blocco,
 	la parentesi di apertura del blocco deve essere in linea con l'istruzione associata.
