--- a/docs/template/history.tex
+++ b/docs/template/history.tex
@@ -28,7 +28,7 @@
 	\begin{center}
 		\begin{tabularx}{\textwidth}{|c|c|c|c|X|}
 		\hline
-		\textbf{Versione} & \textbf{Data} & \textbf{Persona} & \textbf{Attivtà} & \textbf{Descrizione} \\
+		\textbf{Versione} & \textbf{Data} & \textbf{Persona} & \textbf{Attività} & \textbf{Descrizione} \\
 		\hline
 		\listversioni
 		\end{tabularx}
