--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -19,18 +19,19 @@
 Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei costi sostenuti fino ad oggi e li confronta con i costi preventivati, in relazione agli obiettivi fissati.
 }
 
-\addversione{0.0.0}{13/11/2021}{Elia Scandaletti}{Redazione}{Stesura iniziale}
-\addversione{0.0.1}{07/02/2022}{Elia Scandaletti}{Redazione}{Aggiornamento impegni secondo Verbale del 04/02/2022}
-\addversione{0.0.2}{11/02/2022}{Elia Scandaletti}{Redazione}{Aggiornamento per RTB}
-\addversione{1.0.0}{12/02/2022}{Giovanni Cocco}{Approvazione}{Approvazione per RTB}
-\addversione{2.0.0}{19/03/2022}{Giovanni Cocco}{Redazione}{Rifacimento documento}
-\addversione{2.1.0}{27/03/2022}{Giovanni Cocco}{Redazione}{Ciclo 1}
+\addversione{0.0.0}{13/11/2021}{Elia Scandaletti}{Redazione}{Stesura iniziale.}
+\addversione{0.0.1}{07/02/2022}{Elia Scandaletti}{Redazione}{Aggiornamento impegni secondo Verbale del 04/02/2022.}
+\addversione{0.0.2}{11/02/2022}{Elia Scandaletti}{Redazione}{Aggiornamento per RTB.}
+\addversione{1.0.0}{12/02/2022}{Giovanni Cocco}{Approvazione}{Approvazione per RTB.}
+\addversione{2.0.0}{19/03/2022}{Giovanni Cocco}{Redazione}{Rifacimento documento.}
+\addversione{2.1.0}{27/03/2022}{Giovanni Cocco}{Redazione}{Ciclo 1.}
 \addversione{2.2.0}{03/04/2021}{Matteo Galvagni}{Redazione}{Aggiunto preventivo per ciclo 2.}
 \addversione{2.3.0}{07/04/2021}{Matteo Galvagni}{Redazione}{Aggiornamento ciclo 2.}
 \addversione{2.4.0}{07/04/2022}{Federico Marchi}{Redazione}{Aggiunto preventivo per ciclo 3.}
 \addversione{2.4.1}{08/04/2022}{Matteo Galvagni}{Redazione}{Correzione errore Gantt.}
 \addversione{2.5.0}{13/04/2022}{Federico Marchi}{Redazione}{Aggiornamento ciclo 3.}
 \addversione{2.6.0}{16/04/2022}{Alberto Nicoletti}{Redazione}{Aggiunto preventivo per ciclo 4.}
+\addversione{2.6.1}{18/04/2022}{Elia Scandaletti}{Redazione}{Correzione grammatica.}
 
 \def\pgfcalendarmonthitname#1{%
 \ifcase#1 \or Gennaio\or Febbraio\or Marzo\or Aprile\or Maggio\or Giugno\or Luglio\or Agosto\or Settembre\or Ottobre\or Novembre\or Dicembre\fi%
@@ -48,7 +49,7 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 
 \section{Pianificazione generale}
 
-\subsection{Diagramma di Gannt}
+\subsection{Diagramma di Gantt}
 \begin{ganttchart}[
     expand chart = \textwidth,
     time slot format = isodate,
@@ -75,7 +76,7 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 \ganttbar[progress=10]{Completamento WebApp}{2022-04-14}{2022-04-25} \\
 \ganttbar[progress=0]{Validazione}{2022-04-27}{2022-05-11}
 \end{ganttchart}
-\captionof{figure}{Diagramma di Gannt del progetto}
+\captionof{figure}{Diagramma di Gantt del progetto}
 
 
 \subsection{Consuntivo attuale}
@@ -756,7 +757,7 @@ Il primo ciclo sarà riassuntivo del lavoro fino alla conclusione dell'RTB. Incl
         \hline
         \textbf{Problema} & \textbf{Misure di mitigazione}\\
         \hline
-        Il colloquio PB può non avere un riscontro positivo. & Verrano messe in pausa le task programmate per concentrarsi sulla correzione degli errori.\\
+        Il colloquio PB può non avere un riscontro positivo. & Verranno messe in pausa le task programmate per concentrarsi sulla correzione degli errori.\\
         \hline
     \end{tabularx}\\[8pt]
     \mbox{}\\
