Add version to manual

--- a/docs/esterni/manuale_e-commerce/manuale_e-commerce.tex
+++ b/docs/esterni/manuale_e-commerce/manuale_e-commerce.tex
@@ -14,10 +14,12 @@
 \setdescrizione{
 Manuale e-commerce.
 }
+\addversione{0.1.0}{13/04/2022}{Federico Marchi}{Redazione}{Stesura iniziale}
 
 \begin{document}
 
 \makefrontpage
+\makeversioni
 \tableofcontents
 \newpage
 
