--- a/docs/esterni/manuale_acquirente/manuale_acquirente.tex
+++ b/docs/esterni/manuale_acquirente/manuale_acquirente.tex
@@ -13,10 +13,12 @@
 \setdescrizione{
 Manuale acquirente.
 }
+\addversione{0.1.0}{13/04/2022}{Federico Marchi}{Redazione}{Stesura iniziale}
 
 \begin{document}
 
 \makefrontpage
+\makeversioni
 \tableofcontents
 \newpage
 
