--- a/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
+++ b/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
@@ -27,6 +27,7 @@ Questo documento serve a definire le metriche e i criteri di accettazione dei pr
 \addversione{2.1.0}{30/03/2022}{Giovanni Cocco}{Redazione}{Aggiornamento per ciclo 1.}
 \addversione{2.2.0}{07/04/2022}{Matteo Galvagni}{Redazione}{Aggiornamento per ciclo 2.}
 \addversione{2.3.0}{13/04/2022}{Federico Marchi}{Redazione}{Aggiornamento per ciclo 3.}
+\addversione{2.4.0}{20/04/2022}{Alberto Nicoletti}{Redazione}{Aggiornamento per ciclo 4.}
 
 \begin{document}
 
@@ -120,6 +121,7 @@ Fanno eccezione i verbali in cui ogni punto indica un verbale specifico.
 					(2022-03-23, 72.44)
 					(2022-04-07, 66.92)
 					(2022-04-13, 68.26)
+					(2022-04-20, 69.12)
 				};\addlegendentry{Verbali interni}
 
 			\addplot coordinates {
@@ -127,6 +129,7 @@ Fanno eccezione i verbali in cui ogni punto indica un verbale specifico.
 					(2022-03-27, 55.15)
 					(2022-04-07, 55.19)
 					(2022-04-13, 55.15)
+					(2022-04-20, 55.15)
 				};\addlegendentry{Norme di progetto}
 
 		\end{axis}
@@ -179,6 +182,7 @@ Fanno eccezione i verbali in cui ogni punto indica un verbale specifico.
 					(2022-03-27, 55.16)
 					(2022-04-07, 55.17)
 					(2022-04-13, 55.53)
+					(2022-04-20, 55.53)
 				};\addlegendentry{Analisi dei requisiti}
 
 			\addplot coordinates {
@@ -186,6 +190,7 @@ Fanno eccezione i verbali in cui ogni punto indica un verbale specifico.
 					(2022-03-27, 41.8)
 					(2022-04-07, 42.58)
 					(2022-04-13, 43.22)
+					(2022-04-20, 42.18)
 				};\addlegendentry{Piano di progetto}
 
 			\addplot coordinates {
@@ -193,6 +198,7 @@ Fanno eccezione i verbali in cui ogni punto indica un verbale specifico.
 					(2022-03-27, 51.76)
 					(2022-04-07, 56.17)
 					(2022-04-13, 56.15)
+					(2022-04-20, 56.08)
 				};\addlegendentry{Piano di qualifica}
 
 		\end{axis}
@@ -265,6 +271,7 @@ Ogni punto indica la copertura percentuale degli statement nella data indicata.
 					(2022-03-22, 60)
 					(2022-03-27, 85)
 					(2022-04-13, 85)
+					(2022-04-20, 86)
 				};\addlegendentry{WebApp - frontend}
 			\addplot coordinates {
 					(2022-03-02, 0)
@@ -424,12 +431,14 @@ Ogni punto indica la variazione del consuntivo rispetto al preventivo di un cicl
 					(2022-03-30, +25)
 					(2022-04-07, +14)
 					(2022-04-14, -9)
+					(2022-04-20, +22)
 				};\addlegendentry{Documenti}
 			\addplot coordinates {
 					(2022-03-23, 0)
 					(2022-03-30, -33)
 					(2022-04-07, -18)
 					(2022-04-14, -15)
+					(2022-04-20, +15)
 				};\addlegendentry{Software}
 		\end{axis}
 	\end{tikzpicture}
@@ -491,12 +500,14 @@ Ogni punto indica la variazione del consuntivo rispetto al preventivo di un cicl
 					(2022-03-30, +30)
 					(2022-04-07, +18)
 					(2022-04-14, -8)
+					(2022-04-20, +23)
 				};\addlegendentry{Documenti}
 			\addplot coordinates {
 					(2022-03-23, 0)
 					(2022-03-30, -33)
 					(2022-04-07, -29)
 					(2022-04-14, -16)
+					(2022-04-20, +15)
 				};\addlegendentry{Software}
 		\end{axis}
 	\end{tikzpicture}
