data fine effettiva

--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -692,7 +692,7 @@ Il primo ciclo sarà riassuntivo del lavoro fino alla conclusione dell'RTB. Incl
 \subsection{Sprint 4}
 \textbf{Data di inizio:} 13-04-2022\\
 \textbf{Data di fine pianificata:} 20-04-2022\\
-\textbf{Data di fine effettiva:} TBD
+\textbf{Data di fine effettiva:} 20-04-2022
 
 \subsubsection{Pianificazione}\mbox{}
 
