--- a/docs/interni/verbali/2022_04_20_I/2022_04_20_I.tex
+++ b/docs/interni/verbali/2022_04_20_I/2022_04_20_I.tex
@@ -51,7 +51,7 @@ La PR per le modifiche al footer è stata revisionata durante il meeting e sono 
 Le altre tasks sono state completate.
 
 \subsection{Criticità ciclo di sprint 4}
-Durante il ciclo di sprint 4 non sono emerse alcune criticità.
+Le festività pasquali non erano state considerate nel preventivo e ciò è stato causa dei vari ritardi nel completamento delle tasks.
 
 
 \subsection{Tasks per il ciclo di sprint 5}
