--- a/docs/esterni/manuale_e-commerce/manuale_e-commerce.tex
+++ b/docs/esterni/manuale_e-commerce/manuale_e-commerce.tex
@@ -37,7 +37,7 @@ Se il network Polygon non è gia stato inserito nel proprio wallet Metamask, pro
 \item Network Name: \textbf{Matic Mainnet};
 \item New RPC Url: \textbf{https://rpc-mainnet.maticvigil.com/};
 \item ChainID: \textbf{137};
-\item Currency Simbol: \textbf{MATIC};
+\item Currency Symbol: \textbf{MATIC};
 \item Block Explorer URL: \textbf{https://explorer.matic.network/}.
 \end{itemize}
 Una volta inseriti i dati e aggiunto il network, ricordare di selezionare il network.
@@ -214,7 +214,7 @@ L'output visualizzato sarà:
 \end{lstlisting}
 Dove :
 \begin{itemize}
-  \item \textbf{paymement entry id: 3}: indica che l'id dell'oggetto messo in vendita è 3;
+  \item \textbf{payment entry id: 3}: indica che l'id dell'oggetto messo in vendita è 3;
   \item \textbf{price: 2}: indica che il prezzo a cui è stato messo in vendita il prodotto è di 2\$.
 \end{itemize}
 \subsection{Reindirizzamento alla landing page}
