--- a/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
+++ b/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
@@ -28,6 +28,7 @@ Questo documento serve a definire le metriche e i criteri di accettazione dei pr
 \addversione{2.2.0}{07/04/2022}{Matteo Galvagni}{Redazione}{Aggiornamento per ciclo 2.}
 \addversione{2.3.0}{13/04/2022}{Federico Marchi}{Redazione}{Aggiornamento per ciclo 3.}
 \addversione{2.4.0}{20/04/2022}{Alberto Nicoletti}{Redazione}{Aggiornamento per ciclo 4.}
+\addversione{2.4.1}{21/04/2022}{Elia Scandaletti}{Redazione}{Correzione grammatica.}
 
 \begin{document}
 
@@ -64,8 +65,8 @@ Questo documento serve a definire le metriche e i criteri di accettazione dei pr
 \end{center}
 \subparagraph{Note:}
 Si tiene conto che un indice di 40 è leggibile a una persona in possesso di un diploma superiore (come tutti i nostri stakeholders).
-Inoltre l'indice di Gulpease calcolato risulta con un bias verso il basso dato che non tiene conto della leggibilità aggiuntiva fornita da tabelle ed elenci puntati
-(entrabi abbondantementi presenti nei nostri documenti).
+Inoltre l'indice di Gulpease calcolato risulta con un bias verso il basso dato che non tiene conto della leggibilità aggiuntiva fornita da tabelle ed elenchi puntati
+(entrambi abbondantemente presenti nei nostri documenti).
 
 \subparagraph{Strumenti utilizzati:}
 \begin{itemize}
