stesura Piano di Progetto (#145)
Co-authored-by: iota97 <giovi.cocco@gmail.com>

--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -12,7 +12,7 @@
 \input{\templates/history}
 
 \settitolo{Piano di Progetto}
-\setredattori{Elia Scandaletti \\ Giovanni Cocco \\ Matteo Galvagni \\ Federico Marchi \\ Alberto Nicoletti}
+\setredattori{Elia Scandaletti \\ Giovanni Cocco \\ Matteo Galvagni \\ Federico Marchi \\ Alberto Nicoletti \\ Raffaele Oliviero}
 \setresponsabili{Giovanni Cocco}
 \setdestuso{esterno}
 \setdescrizione{
@@ -33,6 +33,7 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 \addversione{2.6.0}{16/04/2022}{Alberto Nicoletti}{Redazione}{Aggiunto preventivo per ciclo 4.}
 \addversione{2.7.0}{20/04/2022}{Alberto Nicoletti}{Redazione}{Chiusura ciclo 4.}
 \addversione{2.7.1}{21/04/2022}{Elia Scandaletti}{Redazione}{Correzione grammatica.}
+\addversione{2.8.0}{21/04/2022}{Raffaele Oliviero}{Redazione}{Aggiunto preventivo per ciclo 5.}
 
 \def\pgfcalendarmonthitname#1{%
 \ifcase#1 \or Gennaio\or Febbraio\or Marzo\or Aprile\or Maggio\or Giugno\or Luglio\or Agosto\or Settembre\or Ottobre\or Novembre\or Dicembre\fi%
@@ -815,6 +816,76 @@ Il primo ciclo sarà riassuntivo del lavoro fino alla conclusione dell'RTB. Incl
         \textbf{Nozione} & \textbf{Conseguenza sulla pianificazione}\\
         \hline
         La qualità di presentazione durante la revisione è da migliorare. Soprattutto nella gestione dei tempi e nel selezionare le cose da esporre in base all'interlocutore.  & Maggiore impegno nella preparazione delle slides e nel provare l'esposizione. \\
+        \hline
+    \end{tabularx}\\[8pt]
+    \mbox{}\\
+\end{center}
+
+\subsection{Sprint 5}
+\textbf{Data di inizio:} 20-04-2022\\
+\textbf{Data di fine pianificata:} 27-04-2022\\
+\textbf{Data di fine effettiva:} N/A
+
+\subsubsection{Pianificazione}\mbox{}
+
+\begin{center}
+    \begin{tabularx}{\textwidth}{|X|X|}
+        \hline
+        \multicolumn{2}{|c|}{\textbf{Item da realizzare}}\\
+        \hline
+        \hline
+        \textbf{Item} & \textbf{Persone richieste}\\
+        \hline
+        Finire la stesura del manuale d'installazione. & 1\\
+        \hline
+		Sviluppare la grafica della web-app. & 2 \\
+		\hline
+		Completare le funzionalità della web-app. & 2 \\
+		\hline
+		Rendere accessibile la web-app. & 1 \\
+		\hline
+		Creare una bozza della presentazione PB. & 2\\
+		\hline
+    \end{tabularx}\\[8pt]
+    \mbox{}\\
+\end{center}
+
+\begin{center}
+    \begin{tabularx}{\textwidth}{|X|X|X|X|}
+        \hline
+        \multicolumn{4}{|c|}{\textbf{Preventivo ore/costi}}\\
+        \hline
+        \hline
+        \textbf{Ruolo} & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)}\\
+        \hline
+        Responsabile    & 30 & 4  & 120\\
+        \hline
+        Amministratore  & 20 & 12  & 240\\
+        \hline
+        Analista        & 25 & 0  & 0\\
+        \hline
+        Progettista     & 25 & 2  & 50\\
+        \hline
+        Programmatore   & 15 & 10  & 150\\
+        \hline
+        Verificatore    & 15 & 3  & 45\\
+        \hline
+        \hline
+        \textbf{Totale} &    & 31 & 605\\
+        \hline
+    \end{tabularx}\\[8pt]
+    \mbox{}\\
+\end{center}
+
+\begin{center}
+    \begin{tabularx}{\textwidth}{|X|X|}
+        \hline
+        \multicolumn{2}{|c|}{\textbf{Possibili problematiche}}\\
+        \hline
+        \hline
+        \textbf{Problema} & \textbf{Misure di mitigazione}\\
+        \hline
+        Qualora il colloquio con il prof. Cardin dovesse risultare positivo, sarà necessario un incontro per preparare la presentazione PB in vista del colloquio con il prof. Vardanega. & I membri del gruppo sono stati avvisati della possibilità e alcuni membri sono stati assegnati per la creazione di una bozza che verrà visionata e potenzialmente modificata da tutti i membri del gruppo.\\
         \hline
     \end{tabularx}\\[8pt]
     \mbox{}\\
