--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -137,6 +137,8 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
     \mbox{}\\
 \end{center}
 
+\textbf{Data di fine prevista}: 12 Maggio 2022
+
 \section{Metodo di lavoro}
 Il metodo di lavoro fa uso del framework SCRUM. Si farà inoltre uso della tecnica di Continuos Integration.\\
 Questo metodo si presta meglio di un modello a cascata data la difficoltà di realizzare una pianificazione accurata a monte con tecnologie poco conosciute.\\\\
@@ -634,6 +636,7 @@ Il primo ciclo sarà riassuntivo del lavoro fino alla conclusione dell'RTB. Incl
     \end{tabularx}\\[8pt]
     \mbox{}\\
 \end{center}
+\clearpage
 \subsubsection{Resoconto}\mbox{}
 
 \begin{center}
