--- a/docs/esterni/lettera_pb/lettera_di_presentazione.tex
+++ b/docs/esterni/lettera_pb/lettera_di_presentazione.tex
@@ -8,6 +8,9 @@
 \includegraphics[width=0.4\textwidth]{WSWS-logos_transparent_crop}\\
 {\Large Winning Software Solution}\\[24pt]
 \end{center}
+\begin{flushright}
+    Padova - 22 Aprile 2022
+\end{flushright}
 Egregio Prof. Vardanega,\\\\
 con la presente, il gruppo Winning Software Solution desidererebbe candidarsi in maniera ufficiale
 per la fase di PB.\\\\
@@ -19,31 +22,31 @@ potrà trovare i seguenti documenti:\\
 
 Nella cartella \textit{esterni} del repository, ciascuno nella propria cartella:
 \begin{itemize}
-\item \href{https://github.com/iota97/WinningSoftwareSolution/tree/main/public/esterni/piano_di_qualifica/piano_di_qualifica_v2.4.1.pdf}{Piano di Qualifica v2.4.1};
-\item \href{https://github.com/iota97/WinningSoftwareSolution/tree/main/public/esterni/piano_di_progetto/piano_di_progetto_v2.8.0.pdf}{Piano di Progetto v2.8.0};
-\item \href{https://github.com/iota97/WinningSoftwareSolution/tree/main/public/esterni/manuale_acquirente/manuale_acquirente_v0.1.0.pdf}{Manuale Acquirente v0.1.0};
-\item \href{https://github.com/iota97/WinningSoftwareSolution/tree/main/public/esterni/manuale_e-commerce/manuale_e-commerce_v0.1.0.pdf}{Manuale E-Commerce v0.1.0};
-\item \href{https://github.com/iota97/WinningSoftwareSolution/tree/main/public/esterni/lettera_pb/lettera_di_presentazione.pdf}{Lettera di presentazione PB}.
+\item \href{https://github.com/iota97/WinningSoftwareSolution/tree/main/public/esterni/piano_di_qualifica/piano_di_qualifica_v2.4.1.pdf}{\underline{Piano di Qualifica v2.4.1}};
+\item \href{https://github.com/iota97/WinningSoftwareSolution/tree/main/public/esterni/piano_di_progetto/piano_di_progetto_v2.8.0.pdf}{\underline{Piano di Progetto v2.8.0}};
+\item \href{https://github.com/iota97/WinningSoftwareSolution/tree/main/public/esterni/manuale_acquirente/manuale_acquirente_v0.1.0.pdf}{\underline{Manuale Acquirente v0.1.0}};
+\item \href{https://github.com/iota97/WinningSoftwareSolution/tree/main/public/esterni/manuale_e-commerce/manuale_e-commerce_v0.1.0.pdf}{\underline{Manuale E-Commerce v0.1.0}};
+\item \href{https://github.com/iota97/WinningSoftwareSolution/tree/main/public/esterni/lettera_pb/lettera_di_presentazione.pdf}{\underline{Lettera di presentazione PB}}.
 \end{itemize}
 Nella cartella \textit{interni/norme\_di\_progetto} del repository:
 \begin{itemize}
-    \item \href{https://github.com/iota97/WinningSoftwareSolution/tree/main/public/interni/norme_di_progetto/norme_di_progetto_v2.0.2.pdf}{Norme di Progetto v2.0.2.}
+    \item \href{https://github.com/iota97/WinningSoftwareSolution/tree/main/public/interni/norme_di_progetto/norme_di_progetto_v2.0.2.pdf}{\underline{Norme di Progetto v2.0.2.}}
 \end{itemize}
 
 Nella cartella \textit{interni/verbali} i verbali interni, quelli aggiunti dalla precedente revisione sono:
 \begin{itemize}
-    \item \href{https://github.com/iota97/WinningSoftwareSolution/tree/main/public/interni/verbali/2022_03_23_I.pdf}{Verbale del 23/03/2022};
-    \item \href{https://github.com/iota97/WinningSoftwareSolution/tree/main/public/interni/verbali/2022_03_29_I.pdf}{Verbale del 29/03/2022};
-    \item \href{https://github.com/iota97/WinningSoftwareSolution/tree/main/public/interni/verbali/2022_04_06_I.pdf}{Verbale del 06/04/2022};
-    \item \href{https://github.com/iota97/WinningSoftwareSolution/tree/main/public/interni/verbali/2022_04_13_I.pdf}{Verbale del 13/04/2022};
-    \item \href{https://github.com/iota97/WinningSoftwareSolution/tree/main/public/interni/verbali/2022_04_20_I.pdf}{Verbale del 20/04/2022}.
+    \item \href{https://github.com/iota97/WinningSoftwareSolution/tree/main/public/interni/verbali/2022_03_23_I.pdf}{\underline{Verbale del 23/03/2022}};
+    \item \href{https://github.com/iota97/WinningSoftwareSolution/tree/main/public/interni/verbali/2022_03_29_I.pdf}{\underline{Verbale del 29/03/2022}};
+    \item \href{https://github.com/iota97/WinningSoftwareSolution/tree/main/public/interni/verbali/2022_04_06_I.pdf}{\underline{Verbale del 06/04/2022}};
+    \item \href{https://github.com/iota97/WinningSoftwareSolution/tree/main/public/interni/verbali/2022_04_13_I.pdf}{\underline{Verbale del 13/04/2022}};
+    \item \href{https://github.com/iota97/WinningSoftwareSolution/tree/main/public/interni/verbali/2022_04_20_I.pdf}{\underline{Verbale del 20/04/2022}}.
 \end{itemize}
 
 Nella cartella \textit{esterni/verbali} i verbali esterni, non sono presenti nuovi verbali esterni.
 
 \begin{flushright}
 Cordiali Saluti,\\
-Winning Software Solution
+Winning Software Solution\\
 \end{flushright}
 
 \end{document}
